jlamontSC-test/src/objects/CastIron_Monitor_Log__c.object
<CustomObject>
    <fields>
        <fullName>CI_Activity_Description__c</fullName>
        <label>CI Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Fault_Message__c</fullName>
        <label>CI Fault Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CI_Fault_Time__c</fullName>
        <label>CI Fault Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Log_Type__c</fullName>
        <label>CI Log Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Activity_Name__c</fullName>
        <label>Fault Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Name__c</fullName>
        <label>Fault Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CastIron Monitor Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CI_Fault_Message__c</columns>
        <columns>Fault_Activity_Name__c</columns>
        <columns>Fault_Name__c</columns>
        <columns>CI_Log_Type__c</columns>
        <columns>CI_Activity_Description__c</columns>
        <columns>CI_Fault_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CastIron Monitor Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CastIron Monitor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>